force-app/main/default/objects/WM4SF3__WalkMeExtension__c/WM4SF3__WalkMeExtension__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Stores the WalkMe extension parameters</description>
    <label>WalkMeExtension</label>
</CustomObject>