force-app/main/default/objects/WM4SF3__WalkMeExtension__c/fields/WM4SF3__CTA_image_path__c.field-meta.xml
<CustomField>
    <fullName>WM4SF3__CTA_image_path__c</fullName>
    <label>CTA image path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>