force-app/main/default/objects/WM4SF3__WalkMeExtension__c/fields/WM4SF3__Extension_Guid__c.field-meta.xml
<CustomField>
    <fullName>WM4SF3__Extension_Guid__c</fullName>
    <label>Extension Guid</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>