force-app/main/default/objects/WM4SF3__WalkMeExtension__c/fields/WM4SF3__QA_Mode__c.field-meta.xml
<CustomField>
    <fullName>WM4SF3__QA_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QA Mode</label>
    <type>Checkbox</type>
</CustomField>